# projeto-final-eng-dados

./: .gitignore  LICENSE  README.md  pyproject.toml
dashboard/: index.html  package-lock.json  package.json
dashboard/src/: App.css  App.tsx  index.css
dashboard/src/components/: Chart.tsx  CustomCard.tsx
dashboard/src/pages/: Dashboard.tsx
dashboard/src/router/: router.tsx
data/generated_data/: addresses.csv  categories.csv  customers.csv  order_items.csv  orders.csv  payments.csv  products.csv  promotions.csv  reviews.csv  suppliers.csv
iac/: .terraform.lock.hcl  main.tf  output.tf  variables.tf  versions.tf
scripts/: generate_data.py  runner.py  tables.sql
src/: main.py
