[tool.poetry]
name = "projeto-final-eng-dados"
version = "0.1.0"
description = "Projeto final de Engenharia de Dados"
authors = [
    "Jean Guichard",
    "João Carlos",
    "Lucas Silva",
    "Matheus Daminelli",
    "Matheus Gastaldi"
    ]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
faker = "^37.3.0"
pandas = "^2.3.0"
fastapi = {extras = ["standard"], version = "^0.115.12"}
uvicorn = {extras = ["standard"], version = "^0.34.3"}


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
blue = "^0.9.1"


[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.0"
mkdocs-material = "^9.5.23"
pymdown-extensions = "^10.8.1"
mkdocstrings = "^0.25.1"


[tool.poetry.group.test.dependencies]
pytest = "^8.2.0"

[tool.poetry.scripts]
start = "scripts.runner:start_server"
seed = "scripts.generate_data:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
